# quadruped_v2

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml  param.yaml
launch/: empty_world.launch  walk.launch  walk_vrep.launch
src/: basic_functions.cpp  body.cpp  body.h  body_manip.cpp  gait.cpp  gait.h  gait_var.cpp  leg.cpp  leg.h  path.cpp  path.h  publish.cpp  publish.h  stability.cpp  walk.cpp
urdf/: quad2.urdf  quad2.xacro
worlds/: empty_world.world
